# semver-solver

./: .gitignore  Cargo.toml  test-conflict-package.json  test-conflict-versions.json  test-package.json  test-versions.json
crates/semver-solver-cli/: Cargo.toml
crates/semver-solver-cli/src/: main.rs
crates/semver-solver-core/: Cargo.toml
crates/semver-solver-core/src/: constraint.rs  dependency.rs  error.rs  lib.rs  package.rs  pkg_manager.rs  version.rs
crates/semver-solver-parsers/: Cargo.toml
crates/semver-solver-parsers/src/: cargo.rs  go_mod.rs  lib.rs  manifest.rs  npm.rs  pip.rs
crates/semver-solver-registry/: Cargo.toml
crates/semver-solver-registry/src/: cache.rs  lib.rs  offline.rs  online.rs  registry.rs
crates/semver-solver-solver/: Cargo.toml
crates/semver-solver-solver/src/: conflict.rs  dep_tree.rs  lib.rs  lockfile.rs  output.rs  sat.rs  solver.rs  suggestions.rs
crates/semver-solver-solver/tests/: integration_tests.rs
