[workspace]
resolver = "2"
members = [
    "crates/semver-solver-core",
    "crates/semver-solver-parsers",
    "crates/semver-solver-registry",
    "crates/semver-solver-solver",
    "crates/semver-solver-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
semver-solver-core = { path = "crates/semver-solver-core" }
semver-solver-parsers = { path = "crates/semver-solver-parsers" }
semver-solver-registry = { path = "crates/semver-solver-registry" }
semver-solver-solver = { path = "crates/semver-solver-solver" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.5", features = ["derive", "color"] }
colored = "2.1"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
once_cell = "1.19"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
petgraph = "0.6"
itertools = "0.12"
