[package]
name = "semver-solver-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "semver-solver"
path = "src/main.rs"

[dependencies]
semver-solver-core = { workspace = true }
semver-solver-parsers = { workspace = true }
semver-solver-registry = { workspace = true }
semver-solver-solver = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
