[package]
name = "semver-solver-parsers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
semver-solver-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
anyhow = { workspace = true }
