[package]
name = "semver-solver-registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
semver-solver-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
